# BigBadBalls

./: Arrows.cpp  Arrows.h  CMakeLists.txt  MainScene.cpp  MainScene.h  MainWindow.cpp  MainWindow.h  Mutes.cpp  Mutes.h  Player.cpp  Player.h  README.md  main.cpp  medias.qrc
dolby_atmos/: phonkwoods.m4a  slowwoods.m4a
images/: background.jpg.old  mute.png.old  muter.png.old
